README: polished version with DeepWiki, Fork Heritage, Key Features